1 added frontend apis

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_BASE_URL=http://demo.thecybertech.online/o2o/public/api
+NEXT_PUBLIC_BASE_IMG_URL=http://demo.thecybertech.online/o2o/public/uploads/f_img/
