--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_BASE_URL=http://demo.thecybertech.online/o2o/public/api
 NEXT_PUBLIC_BASE_IMG_URL=http://demo.thecybertech.online/o2o/public/uploads/f_img/
+NEXT_PUBLIC_BASE_APP_NAME=O2O
