--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
+    "next": "^13.4.7-canary.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-search-autocomplete": "^8.5.2"
+    "react-dom": "18.2.0"
   }
 }
